--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "firebase-admin": "^13.2.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
