--- a/client/moms_best/package.json
+++ b/client/moms_best/package.json
@@ -15,14 +15,17 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
+    "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.2",
     "react-router-dom": "^7.5.2",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "webfontloader": "^1.6.28"
   },
