--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
     "start": "node dist/index.js",
-    "build": "tsc"
+    "build": "tsc --outDir dist",
+    "netlify-build": "npm run build"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "firebase-admin": "^13.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
+    "serverless-http": "^3.2.0",
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
