--- a/server/netlify.toml
+++ b/server/netlify.toml
@@ -8,10 +8,10 @@
 
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/api/:splat"
+  to = "/.netlify/functions/netlify/:splat"
   status = 200
 
 [[redirects]]
   from = "/*"
-  to = "/.netlify/functions/api"
+  to = "/.netlify/functions/netlify"
   status = 200
