--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
     "start": "node dist/index.js",
-    "build": "tsc --outDir public",
-    "netlify-build": "npm run build"
+    "build": "tsc --outDir dist",
+    "netlify-build": "npm run build",
+    "vercel-build": "tsc"
   },
   "keywords": [],
   "author": "",
