--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,9 +6,14 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "baseUrl": ".",          
+    "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    },                            
-  }
+    },
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "moduleResolution": "node"
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
