--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,18 @@
 {
   "version": 2,
-  "builds": [{ "src": "src/index.ts", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "src/index.ts" }]
+  "builds": [
+    {
+      "src": "src/index.ts",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["src/**"]
+      }
+    }
+  ],
+  "routes": [{ "src": "/(.*)", "dest": "src/index.ts" }],
+  "functions": {
+    "src/index.ts": {
+      "includeFiles": "src/**"
+    }
+  }
 }
