--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,10 +9,5 @@
       }
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "src/index.ts" }],
-  "functions": {
-    "src/index.ts": {
-      "includeFiles": "src/**"
-    }
-  }
+  "routes": [{ "src": "/(.*)", "dest": "src/index.ts" }]
 }
