--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,7 +3,11 @@
   "builds": [
     {
       "src": "src/index.ts",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["src/**/*"],
+        "tsconfigPath": "tsconfig.json"
+      }
     }
   ],
   "routes": [{ "src": "/(.*)", "dest": "src/index.ts" }]
